--- a/semesterSeedReactClient/package.json
+++ b/semesterSeedReactClient/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "serverURL": "http://localhost:8084/seedMaven/",
+  "serverURL": "https://178.62.84.142.xip.io/SemSeed/",
   "devDependencies": {
     "autoprefixer": "6.7.2",
     "babel-core": "6.22.1",
